# ICAP

./: .gitignore  CLAUDE.md  PERFORMANCE_ANALYSIS_REPORT.md  README.md  analyzer.py  brain.py  client.py  dev-note.md  exp-note.md  main.py  mujoco_extended_test.py  mujoco_performance_summary.py  mujoco_performance_test.py  note.md  pyproject.toml  readme.md  replay.py  report.md  to_graph.py  versions.md  viewer.py
assets/: food-object.stl  robot-object.stl
environments/: back_enemy.py  back_enemy_with_pheromone.py  collect_feed.py  collect_feed_without_obstacle.py  collect_feed_without_pheromone.py  feed_weight_tuning.py  game_env.py  move_obstacle.py  pheromone.py  sensor.py  utils.py
environments/collect_feed/: viewable_environment.py
example/: back_enemy.py  check_robots_sight.py  move_obstacle.py
example/collect_feed/: client.py  client_without_pheromone.py  server.py
examples/: mujoco_example.py  mujoco_stl_example.py  viewer_example.py
examples/optimization/: server.py
experiment/case1/: environment.py  server.py
framework/: __init__.py  analysis.py  anaylysis.py  dump.py  interfaces.py  parameters.py  prelude.py  settings.py  stracture.md  task.py  task_generator.py  types.py
framework/backends/: __init__.py  _mujoco.py  init_genesis.py  init_mujoco.py  mujoco_stl.py  mujoco_stl_example.py  simple_anime_for_test.py
framework/config/: __init__.py  _env_consts.py  _server_client_settings.py  _settings.py  _viewer_consts.py  env_consts.py  settings.py
framework/controller/: __init__.py  _controller.py
framework/entry_points/: __init__.py  record.py  train.py
framework/environment/: __init__.py  _misc.py  _objects.py  _position_generators.py  misc.py  objects.py  position_generators.py
framework/interfaceis/: __init__.py  loss.py  robot.py
framework/interfaces/: __init__.py  _backend.py  _sensor.py  backend.py
framework/mujoco_utils/: __init__.py  mujoco_constants.py  mujoco_core.py  mujoco_environment.py  mujoco_objects.py  position_generators.py
framework/optimization/: __init__.py  _client.py  _client_new.py  _cmaes.py  _connection.py  _connection_utils.py  _distribution.py  _parallel.py  _server.py  _types.py  loss.py
framework/sensor/: __init__.py  _direction_sensor.py  _omni_sensor.py  _preprocessed_omni_sensor.py
framework/simulator/: __init__.py
framework/types/: __init__.py  communication.py  food.py  optimization.py  position.py  robot.py  utils.py
framework/utils/: __init__.py  _generic_viewer.py  _timer.py  generic_viewer.py
issue/: 202504062355.md  202504070005.md  202504070037.md
lib/mujoco/: dummy_manager.py
lib/mujoco_utils/: __init__.py  _pheromone.py
lib/optimizer/: processe.py  task_interface.py
lib/pheromone/: __init__.py  _pheromone.py  gpu.py
lib/sensor/: __init__.py  direction_sensor.py  distance_measure.py  trigono_omni_sensor.py
lib/setting/: __init__.py  setting_gen.py
lib/utils/: __init__.py  _git.py  _history.py  _miscellaneous.py
scheme/: Note.md  main.py
src/: analysis.py  brain.py  client.py  controller.py  distance_measure.py  environment.py  evaluation_function.py  loss.py  main.py  main.sh  main_parallel.py  robot.py  save_type.py  server.py  settings.py  simulator.py  utils.py  viewer.py
src/train/: main.py
utils/: analyzer.py  replay.py  test_play.py
(+556 files in other folders)
