[tool.poetry]
name = "interpretable-controller-for-analyzing-pheromone-effects"
version = "0.1.0"
description = ""
authors = ["MasashiSUZUKI <masashi.lateolabrax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mujoco-xml-generator = {git = "https://github.com/Masashi-Lateolabrax/mujoco-xml-generator.git", rev = "dev"}
torch = {version = "^2.2.2+cpu", source = "torch"}
torchvision = {version = "^0.17.2+cpu", source = "torch"}
torchaudio = {version = "^2.2.2+cpu", source = "torch"}
opencv-python = "^4.9.0.80"
moviepy = "^1.0.3"
mujoco = "^3.1.3"
deap = "^1.4.1"
psutil = "^5.9.8"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
