[tool.poetry]
name = "interpretable-controller-for-analyzing-pheromone-effects"
version = "0.1.0"
description = ""
authors = ["MasashiSUZUKI <masashi.lateolabrax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
mujoco-xml-generator = { git = "https://github.com/Masashi-Lateolabrax/mujoco-xml-generator.git", rev = "dev" }
torch = { version = "2.2.2+cpu", source = "torch" }
torchvision = { version = "0.17.2+cpu", source = "torch" }
torchaudio = { version = "2.2.2+cpu", source = "torch" }
opencv-python = "4.10.0.84"
mujoco = "3.1.6"
deap = "1.4.1"
psutil = "6.0.0"
scipy = "1.13.1"
cupy-cuda12x = { version = "13.2.0", optional = true }
pyyaml = "6.0.1"
pytk = "^0.0.2.1"

[tool.poetry.extras]
cuda = ["cupy-cuda12x"]

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
